# my-web-service

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  账户转行逻辑.md
docs/: 1-rbac-需求.md  2-rbal-mysql.md  3-rbac-domain.md  my-web-service.postman_collection.json
docs/es/: corp.json  corp.sh  corp_query_dsl.json  corp_query_dsl.jsonc  enterprise.sh
docs/sql/: rbac.sql
src/: context.rs  db.rs  dp.rs  error.rs  lib.rs  main.rs  models.rs  req.rs  reqres.rs  res.rs  routes.rs  services.rs  student_controller.rs
src/api/: mod.rs  res.rs
src/api/cmd/: mod.rs  student_cmd.rs
src/api/primitive/: students.rs
src/app/: mod.rs
src/app/cmd/: student_cmd.rs
src/app/context/: mod.rs  repo.rs  srv.rs
src/app/dto/: mod.rs  req.rs  res.rs  student_cmd.rs
src/app/srv/: container.rs  mod.rs  student_service.rs
src/controller/: student_controller.rs
src/db/: pool.rs
src/ddd/: core.rs  cqes.rs  cqesv.rs  dto.rs  mod.rs  repo.rs  safe.rs
src/domain/: core.rs  mod.rs
src/domain/cmd/: student_cmd.rs
src/domain/cmds/: mod.rs  student_cmd.rs  student_create.rs  student_page.rs
src/domain/commands/: mod.rs  student_by_id.rs  student_create.rs  student_id_oper.rs  student_page.rs  student_update.rs
src/domain/entity/: student.rs
src/domain/model/: mod.rs  student.rs
src/domain/po/: student.rs
src/domain/primitive/: dp.rs  mod.rs  students.rs
src/dto/: req.rs  res.rs
src/infra/: mod.rs
src/infra/db/: mod.rs
src/route/: routes.rs
src/service/: mod.rs  student_services.rs
src/test/: double_dispatch.rs  mod.rs
src/web/: student_controller.rs
(+14 files in other folders)
