[package]
name = "my-web-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio ={ version = "1",features = ["full"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rbs = { version = "4.5"}
rbatis = { version = "4.5", features = [] }
rbdc-mysql={version="4.5"}
fast_log = { version = "1.7" }


log = "0.4"
log4rs = "1.0"

jsonwebtoken = "9.3.0"

redis = "0.27.5"

thiserror = "2.0.3"
regex = "1.11.1"
unicode-segmentation = "1.10"
chrono = {version = "0.4.39", features = ["serde"]}
serde_with = "3.12.0"
